Update azure-pipelines.yml for Azure Pipelines
Added deployment tags

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,7 @@ stages:
             repository: 'niwadev/weather-api-nest'
             command: 'buildAndPush'
             Dockerfile: '**/Dockerfile'
+            tags: |
+              $(version)
+              latest
 
