Update azure-pipelines.yml for Azure Pipelines
Testing with BuildNumber as tag

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,5 @@ stages:
             command: 'buildAndPush'
             Dockerfile: '**/Dockerfile'
             tags: |
-              $(version)
-              latest
+              $(Build.BuildNumber)
 
