--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,4 +32,5 @@ stages:
             Dockerfile: '**/Dockerfile'
             tags: |
               $(Build.BuildNumber)
+              $(Variables.VersionTag)
 
