Update azure-pipelines.yml for Azure Pipelines
Try it with powershell syntax

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,5 +32,5 @@ stages:
             Dockerfile: '**/Dockerfile'
             tags: |
               $(Build.BuildNumber)
-              $(Variables.VersionTag)
+              $env:VERSIONTAG
 
