--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cli": "^6.14.2",
     "@nestjs/common": "^6.11.8",
     "@nestjs/core": "^6.11.8",
     "@nestjs/platform-express": "^6.11.8",
@@ -29,10 +30,13 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.3"
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.0",
+    "tsconfig-paths": "^3.9.0",
+    "swagger-ui-express": "^4.1.3",
+    "typescript": "^3.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.14.2",
     "@nestjs/schematics": "^6.9.4",
     "@nestjs/testing": "^6.11.8",
     "@types/express": "^4.17.2",
@@ -47,11 +51,7 @@
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.3.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.2"
+    "ts-jest": "^24.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
